--- a/lab_07_4/makefile
+++ b/lab_07_4/makefile
@@ -1,38 +1,5 @@
-main.o: main.c
-	gcc -c main.c
-	
-test.o: test.c
-	gcc -c test.c
-
-key.o: key.c
-	gcc -c key.c
-	
-output.o: output.c
-	gcc -c output.c
-	
-record.o: record.c
-	gcc -c record.c
-	
-tick.o: tick.c
-	gcc -c tick.c
-	
-mysort.o: mysort.c
-	gcc -c mysort.c
-	
-key_test.o: key_test.c
-	gcc -c key_test.c
-	
-mysort_test.o: mysort_test.c
-	gcc -c mysort_test.c
-	
-get_pos_test.o: get_pos_test.c
-	gcc -c get_pos_test.c
-	
-get_size_test.o: get_size_test.c
-	gcc -c get_size_test.c
-	
-read_array_test.o: read_array_test.c
-	gcc -c read_array_test.c
+%.o : %.c *.h
+	gcc -c $<
 
 app.exe: main.o mysort.o key.o output.o record.o tick.o
 	gcc -o app.exe main.o mysort.o key.o output.o record.o tick.o
