--- a/lab_07_4/makefile
+++ b/lab_07_4/makefile
@@ -4,8 +4,8 @@
 app.exe: main.o mysort.o key.o output.o record.o tick.o
 	gcc -o app.exe main.o mysort.o key.o output.o record.o tick.o
 	
-test.exe: test.o mysort_test.o key_test.o get_pos_test.o get_size_test.o read_array_test.o
-	gcc -o test.exe test.o mysort_test.o key_test.o get_pos_test.o get_size_test.o read_array_test.o
+test.exe: test.o mysort.o key.o get_pos_test.o get_size_test.o read_array_test.o
+	gcc -o test.exe test.o mysort.o key.o get_pos_test.o get_size_test.o read_array_test.o
 	
 clean:
 	del *.o *.exe
