--- a/lab_07_4/makefile
+++ b/lab_07_4/makefile
@@ -1,8 +1,8 @@
 %.o : %.c *.h
 	gcc -c $<
 
-app.exe: main.o mysort.o key.o output.o record.o tick.o
-	gcc -o app.exe main.o mysort.o key.o output.o record.o tick.o
+app.exe: main.o mysort.o key.o output.o record.o tick.o qsort.o
+	gcc -o app.exe main.o mysort.o key.o output.o record.o tick.o qsort.o
 	
 test.exe: test.o mysort.o key.o get_pos_test.o get_size_test.o read_array_test.o
 	gcc -o test.exe test.o mysort.o key.o get_pos_test.o get_size_test.o read_array_test.o
