--- a/lab_08_5_11/makefile
+++ b/lab_08_5_11/makefile
@@ -9,7 +9,7 @@ app.exe: main.o $(OBJ)
 	$(CC) $(CFLAGS) -o app.exe main.o $(OBJ)
 	
 test.exe: test.o $(OBJ)
-	$(CC) $(CFLAGS) -o test.exe test.o
+	$(CC) $(CFLAGS) -o test.exe test.o $(OBJ)
 	
 clean:
 	del *.o *.exe
