--- a/lab_07_4/makefile
+++ b/lab_07_4/makefile
@@ -1,6 +1,6 @@
 CC := gcc
 CFLAGS := -std=c99 -Wall -Werror -pedantic
-OBJ := mysort.o key.o tick.o read_array_test.o get_size_test.o
+OBJ := mysort.o key.o tick.o read_array_test.o get_size_test.o key_funcs.o do_filter.o
 
 %.o : %.c *.h
 	$(CC) $(CFLAGS) -c $<
